// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additionalData option should use same EOL on all os (dart-sass) (sass): css 1`] = `
"a {
  color: hotpink;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os (dart-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (dart-sass) (scss): css 1`] = `
"a {
  color: red;
}

body {
  color: hotpink;
}"
`;

exports[`additionalData option should use same EOL on all os (dart-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (node-sass) (sass): css 1`] = `
"a {
  color: hotpink; }

body {
  color: hotpink; }
"
`;

exports[`additionalData option should use same EOL on all os (node-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (node-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (node-sass) (scss): css 1`] = `
"a {
  color: red; }

body {
  color: hotpink; }
"
`;

exports[`additionalData option should use same EOL on all os (node-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should use same EOL on all os (node-sass) (scss): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (sass): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (scss): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (sass): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (scss): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a function (node-sass) (scss): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (sass): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (scss): css 1`] = `
"body {
  color: hotpink;
}"
`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (sass): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (sass): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (sass): warnings 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (scss): css 1`] = `
"body {
  color: hotpink; }
"
`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (scss): errors 1`] = `Array []`;

exports[`additionalData option should work with the "data" option as a string (node-sass) (scss): warnings 1`] = `Array []`;
